change stat-description font and fix spacing

--- a/app/assets/stylesheets/tenant.css.scss
+++ b/app/assets/stylesheets/tenant.css.scss
@@ -29,6 +29,11 @@
       }
     }
 
+    .stat-description {
+      font-size: 32px;
+      font-family: 'Source Sans Pro';
+    }
+
     .address {
       font-size: 1em;
       font-family: 'Source Sans Pro';
